# mowen-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  env.example  pyproject.toml  墨问API.md
.github/workflows/: build-macos.yml
examples/: test_file_upload.py
examples/create_note/: 提示词收录.md
scripts/: install.bat  install.sh  start_server.bat  start_server.sh
src/mowen_mcp_server/: __init__.py  __main__.py  config.py  server.py
